// Licensed to SolID under one or more contributor
// license agreements. See the NOTICE file distributed with
// this work for additional information regarding copyright
// ownership. SolID licenses this file to you under
// the Apache License, Version 2.0 (the "License"); you may
// not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing,
// software distributed under the License is distributed on an
// "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
// KIND, either express or implied.  See the License for the
// specific language governing permissions and limitations
// under the License.

syntax = "proto3";

package oidc.core.v1;

option go_package = "oidc/core/v1;corev1";

import "google/protobuf/wrappers.proto";

// ClientType describes OIDC Client type enumeration.
// https://tools.ietf.org/html/rfc6749#section-2.1
enum ClientType {
  // Default value
  CLIENT_TYPE_INVALID = 0;
  // Explicit unknown
  CLIENT_TYPE_UNKNOWN = 1;
  // Clients capable of maintaining the confidentiality of their
  // credentials (e.g., client implemented on a secure server with
  // restricted access to the client credentials), or capable of secure
  // client authentication using other means.
  CLIENT_TYPE_CONFIDENTIAL = 2;
  // Clients incapable of maintaining the confidentiality of their
  // credentials (e.g., clients executing on the device used by the
  // resource owner, such as an installed native application or a web
  // browser-based application), and incapable of secure client
  // authentication via any other means.
  CLIENT_TYPE_PUBLIC = 3;
}

enum SubjectType {
  SUBJECT_TYPE_INVALID = 0;
  SUBJECT_TYPE_UNKNOWN = 1;
  SUBJECT_TYPE_PUBLIC = 2;
  SUBJECT_TYPE_PAIRWISE = 3;
}

// Client defines internal OIDC client properties.
message Client {
  string client_id = 1;
  ClientType client_type = 2;
  repeated string redirect_uris = 3;
  repeated string response_types = 4;
  repeated string grant_types = 5;
  string application_type = 6;
  repeated string contacts = 7;
  string client_name = 8;
  string logo_uri = 9;
  string client_uri = 10;
  string policy_uri = 11;
  string tos_uri = 12;
  string jwks_uri = 13;
  bytes jwks = 14;
  bytes client_secret = 15;
  SubjectType subject_type = 16;
  string sector_identifier = 17;
}

message ClientMeta {
  repeated string redirect_uris = 1;
  google.protobuf.StringValue token_endpoint_auth_method = 2;
  repeated string grant_types = 3;
  repeated string response_types = 4;
  google.protobuf.StringValue client_name = 5;
  map<string, string> client_name_i18n = 6;
  google.protobuf.StringValue client_uri = 7;
  google.protobuf.StringValue logo_uri = 8;
  map<string, string> logo_uri_i18n = 9;
  google.protobuf.StringValue scope = 10;
  repeated string contacts = 11;
  google.protobuf.StringValue tos_uri = 12;
  map<string, string> tos_uri_i18n = 13;
  google.protobuf.StringValue policy_uri = 14;
  map<string, string> policy_uri_i18n = 15;
  google.protobuf.StringValue jwk_uri = 16;
  bytes jwks = 17;
  google.protobuf.StringValue software_id = 18;
  google.protobuf.StringValue software_version = 19;
  google.protobuf.StringValue software_statement = 20;
}

message SoftwareStatement {
  string software_id = 1;
}
